Prevent headings from wrapping

--- a/maediprojects/static/css/style.css
+++ b/maediprojects/static/css/style.css
@@ -15,3 +15,6 @@ body {
 #projects-data {
   margin-top:10px;
 }
+.tablesorter-header {
+  white-space: nowrap;
+}
